# tg-mgr

./: .gitignore  CLAUDE.md  README.md  README.zh.md  config.example.json  config.json  install.sh  pyproject.toml  requirements.txt
src/: .env.example
src/database/: __init__.py  errors.py  messages.py  query.py  schema.sql
src/modules/: __init__.py  clean.py  export.py  filter.py  forward.py  info.py  sync.py
src/modules/clean/: __init__.py  clean_core.py  cleanup.py  cli.py  deduplicate.py
src/modules/export/: __init__.py  cli.py  export.template.html  export_core.py  preview.py  template.py
src/modules/forward/: __init__.py  cli.py  core.py  force.py  forward_core.py  main.py  preview.py  recursive.py  send.py
src/tg_mgr/: __init__.py  __main__.py  init.py  sessions.py
src/utils/: __init__.py  cli.py  download.py  file_sanitizer.py  logger.py  media.py  telegram_client.py  telegram_link.py
tests/: conftest.py  test_clean.py  test_cleanup_logic.py  test_export.py  test_filter.py  test_forward.py  test_info.py  test_init.py  test_media.py  test_messages.py  test_query.py  test_sessions.py  test_sync.py  test_utils.py
